Fix flex-box issue with center Set dimensions to 'box' class (underline issue). This set a definition fixing conflicting issue with boxes not aligning with text properly.

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,18 @@ h3 {
     height: 100px;
 }
 
-.border-img-container {
+.text {
+    font-size: 13px;
+}
+
+.container {
     display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+.box {
+    width: 110px;
+    height: 220px;
+
 }
